[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/interfaces/settings.gd" type="Script" id=2]

[node name="SettingsView" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.0
margin_top = -183.0
margin_right = 438.0
margin_bottom = 261.0
rect_min_size = Vector2( 707, 325 )
theme = ExtResource( 1 )
window_title = "PERF_TITLE"
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PERF_TAB_GENERAL" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 59.0
margin_right = -10.0
margin_bottom = -10.0
tab_align = 0

[node name="View" type="ScrollContainer" parent="TabContainer/PERF_TAB_GENERAL"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Contents" type="VBoxContainer" parent="TabContainer/PERF_TAB_GENERAL/View"]
margin_right = 854.0
margin_bottom = 375.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chk_field_of_view" type="CheckButton" parent="TabContainer/PERF_TAB_GENERAL/View/Contents"]
margin_right = 854.0
margin_bottom = 52.0
hint_tooltip = "PERF_PERSIST_FOV_HINT"
shortcut_in_tooltip = false
text = "PERF_PERSIST_FOV"

[node name="chk_mobile_controls" type="CheckButton" parent="TabContainer/PERF_TAB_GENERAL/View/Contents"]
margin_top = 60.0
margin_right = 854.0
margin_bottom = 112.0
hint_tooltip = "PERF_MOBILE_HINT"
shortcut_in_tooltip = false
text = "PERF_MOBILE"

[node name="locale" type="HBoxContainer" parent="TabContainer/PERF_TAB_GENERAL/View/Contents"]
margin_top = 120.0
margin_right = 854.0
margin_bottom = 165.0

[node name="sel_locale_lbl" type="Label" parent="TabContainer/PERF_TAB_GENERAL/View/Contents/locale"]
margin_top = 2.0
margin_right = 661.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "PERF_LOCALE"

[node name="sel_locale" type="OptionButton" parent="TabContainer/PERF_TAB_GENERAL/View/Contents/locale"]
margin_left = 669.0
margin_right = 854.0
margin_bottom = 45.0
hint_tooltip = "PERF_LOCALE_HINT"
text = "PERF_LOCALE"

[node name="PERF_TAB_AUDIO" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 59.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View" type="ScrollContainer" parent="TabContainer/PERF_TAB_AUDIO"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contents" type="VBoxContainer" parent="TabContainer/PERF_TAB_AUDIO/View"]
margin_right = 854.0
margin_bottom = 375.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grp_vol_music" type="HBoxContainer" parent="TabContainer/PERF_TAB_AUDIO/View/Contents"]
margin_right = 854.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="TabContainer/PERF_TAB_AUDIO/View/Contents/grp_vol_music"]
margin_right = 423.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "PERF_VOL_MUSIC"

[node name="sld_vol_music" type="HSlider" parent="TabContainer/PERF_TAB_AUDIO/View/Contents/grp_vol_music"]
margin_left = 431.0
margin_right = 854.0
margin_bottom = 32.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05

[node name="grp_vol_sfx" type="HBoxContainer" parent="TabContainer/PERF_TAB_AUDIO/View/Contents"]
margin_top = 49.0
margin_right = 854.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="TabContainer/PERF_TAB_AUDIO/View/Contents/grp_vol_sfx"]
margin_right = 423.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "PERF_VOL_SFX"

[node name="sld_vol_sfx" type="HSlider" parent="TabContainer/PERF_TAB_AUDIO/View/Contents/grp_vol_sfx"]
margin_left = 431.0
margin_right = 854.0
margin_bottom = 32.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05

[node name="PERF_TAB_EXTRA" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 59.0
margin_right = -10.0
margin_bottom = -10.0

[node name="View" type="ScrollContainer" parent="TabContainer/PERF_TAB_EXTRA"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contents" type="VBoxContainer" parent="TabContainer/PERF_TAB_EXTRA/View"]
margin_right = 854.0
margin_bottom = 375.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chk_dbg_mode" type="CheckButton" parent="TabContainer/PERF_TAB_EXTRA/View/Contents"]
margin_right = 854.0
margin_bottom = 52.0
hint_tooltip = "PERF_DEBUG_HINT"
shortcut_in_tooltip = false
text = "PERF_DEBUG"

[node name="PERF_TAB_DEBUG" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 59.0
margin_right = -10.0
margin_bottom = -10.0

[node name="View" type="ScrollContainer" parent="TabContainer/PERF_TAB_DEBUG"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contents" type="VBoxContainer" parent="TabContainer/PERF_TAB_DEBUG/View"]
margin_right = 854.0
margin_bottom = 375.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/PERF_TAB_DEBUG/View/Contents"]
margin_right = 854.0
margin_bottom = 41.0
text = "PERF_DEBUG_INFO"
autowrap = true

[node name="chk_dbg_end" type="CheckButton" parent="TabContainer/PERF_TAB_DEBUG/View/Contents"]
margin_top = 49.0
margin_right = 854.0
margin_bottom = 101.0
hint_tooltip = "PERF_DEBUG_ANE_HINT"
text = "PERF_DEBUG_ANE"

[node name="chk_dbg_flb" type="CheckButton" parent="TabContainer/PERF_TAB_DEBUG/View/Contents"]
margin_top = 109.0
margin_right = 854.0
margin_bottom = 161.0
hint_tooltip = "PERF_DEBUG_FLB_HINT"
text = "PERF_DEBUG_FLB"

[node name="chk_dbg_lvl" type="CheckButton" parent="TabContainer/PERF_TAB_DEBUG/View/Contents"]
margin_top = 169.0
margin_right = 854.0
margin_bottom = 221.0
hint_tooltip = "PERF_DEBUG_LVL_NINT"
text = "PERF_DEBUG_LVL"
